--- a/src/pages/style.module.scss
+++ b/src/pages/style.module.scss
@@ -131,7 +131,7 @@
   text-align: center;
   color: var(--tg-theme-hint-color);
   margin: 0 auto;
-  background-color: var(--tg-theme-bg-color);
+  // background-color: var(--tg-theme-bg-color);
   min-height: 90vh;
 
   p {
