--- a/src/components/style.module.scss
+++ b/src/components/style.module.scss
@@ -21,9 +21,9 @@
   }
 }
 
-body {
-  background-color: var(--tg-theme-bg-color);
-}
+// body {
+//   background-color: var(--tg-theme-bg-color);
+// }
 
 body.modal-open {
   overflow: hidden;
@@ -40,8 +40,8 @@ body.modal-open {
   --font-size-base: 16px;
   --font-size-lg: 18px;
   --font-size-xl: 20px;
-  color: var(--tg-theme-text-color);
-  background-color: var(--tg-theme-bg-color);
+  // color: var(--tg-theme-text-color);
+  // background-color: var(--tg-theme-bg-color);
 }
 
 * {
@@ -158,6 +158,7 @@ body.modal-open {
   border: none;
   cursor: pointer;
   font-size: var(--font-size-sm);
+  color: var(--tg-theme-button-text-color);
 
   .anticon {
     font-size: var(--font-size-base);
@@ -342,6 +343,7 @@ body.modal-open {
   padding: 4px 8px;
   border-radius: 12px;
   font-size: 12px;
+  color: var(--tg-theme-button-text-color);
 }
 
 .mythical {
@@ -425,13 +427,16 @@ body.modal-open {
     width: auto;
 
     .price {
-      display: flex;
-      align-items: center;
+      display: block;
+      margin: 0 auto;
       gap: 4px;
-
-      .tonIcon {
+      font-size: 16px;
+      font-weight: 500;
+      
+      img {
         width: 20px;
         height: 20px;
+        object-fit: contain;
       }
     }
 
@@ -2018,7 +2023,7 @@ body.modal-open {
   text-align: center;
   color: var(--tg-theme-hint-color);
   margin: 0 auto;
-  background-color: var(--tg-theme-bg-color);
+  // background-color: var(--tg-theme-bg-color);
   min-height: 90vh;
 
   p {
