--- a/src/index.scss
+++ b/src/index.scss
@@ -6,7 +6,7 @@ body {
   width: 100%;
   overflow-x: hidden;
   -webkit-text-size-adjust: 100%;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  // -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 #root {
