--- a/src/index.scss
+++ b/src/index.scss
@@ -7,6 +7,7 @@ body {
   overflow-x: hidden;
   -webkit-text-size-adjust: 100%;
   // -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  background-color: var(--tg-theme-bg-color);
 }
 
 #root {
